Build system refactored. Added /src folder, resulting files now saved in /build folder, gulp without parameters starts server and reloads when changes are saved, added gulp clean task.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "browser-sync": "latest",
     "gulp-sourcemaps": "latest",
     "gulp-autoprefixer": "latest",
-    "gulp-clean-css": "latest"
+    "gulp-clean-css": "latest",
+    "gulp-clean": "latest"
   }
 }
