--- a/package.json
+++ b/package.json
@@ -1,4 +1,14 @@
 {
+  "dependencies": {
+    "jquery": "^1.12.4",
+    "jquery.easing": "^1.3.0",
+    "jquery.stellar": "^0.6.2",
+    "waypoints": "^4.0.1",
+    "magnific-popup": "^1.1.0",
+    "bootstrap": "^3.3.7",
+    "animate.css": "3.5.1",
+    "icomoon": "^1.0.0"
+  },
   "devDependencies": {
     "gulp": "latest",
     "gulp-sass": "latest",
