--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "jquery": "^1.12.4",
+    "jquery": "^3.3.1",
+    "jquery-migrate": "^3.0.1",
     "jquery.easing": "^1.3.0",
     "jquery.stellar": "^0.6.2",
     "waypoints": "^4.0.1",
